# mauikit

./: .clang-format  .gitignore  .qdocconf  .travis.yml  .travis.yml_disabled  CMakeLists.txt  MauiKit-android-dependencies.xml  MauiKitConfig.cmake.in  PKGBUILD  README.md  assets.qrc  mauikit-craft-blueprint.py  mauikit.pri  mauikit.pro  mauikit.qrc  metainfo.yaml  travis-build.sh
debian/: rules  (+6 more)
demo/: CMakeLists.txt  demo.pro
demo/src/: assets.qrc  main.cpp  main.qml
src/: CMakeLists.txt  Doxyfile  assets.qrc  icons.qrc  mauikit.cpp  mauikit.h  mauikit.qrc  qmldir  utils.h
src/android/: AndroidManifest.xml  CMakeLists.txt  android.pri  build.gradle  icons.qrc  mauiandroid.cpp  mauiandroid.h  notificationclient.cpp
src/android/res/values/: libs.xml
src/android/res/xml/: filepaths.xml
src/android/src/: .Union.java.kate-swp  MyService.java  SendIntent.java  Union.java
src/colors/: nitruxdark.cpp  nitruxdark.h
src/controls/: .ToolButton.qml.kate-swp  AboutDialog.qml  AbstractSideBar.qml  ActionBar.qml  ActionGroup.qml  ActionSideBar.qml  AltBrowser.qml  AppViewLoader.qml  AppViews.qml  ApplicationWindow.qml  Badge.qml  Browser.qml  Button.qml  ColorsBar.qml  ComboBox.qml  Dialog.qml  Drawer.qml  Editor.qml  ErrorDialog.qml  FileBrowser.qml  FileDialog.qml  FilePreviewer.qml  FloatingButton.qml  GlobalDrawer.qml  GridBrowser.qml  GridBrowserDelegate.qml  GridItemDelegate.qml  GridItemTemplate.qml  GridView.qml  Holder.qml  IconDelegate.qml  ImageViewer.qml  Item.qml  ItemDelegate.qml  LabelDelegate.qml  ListBrowser.qml  ListBrowserDelegate.qml  ListDelegate.qml  ListItemDelegate.qml  ListItemTemplate.qml  (+35 more)
src/controls/csd/libappletdecoration/: config-decoration.h
src/controls/labs/: ActionToolBar.qml  AltBrowser.qml  AlternateListItem.qml  AppView.qml  AppViewLoader.qml  AppViews.qml  CSDControls.qml  Chip.qml  CollageItem.qml  Doodle.qml  DoodleCanvas.qml  FileListingDialog.qml  FlexListItem.qml  GalleryRollItem.qml  IconItem.qml  Page.qml  SectionDropDown.qml  SelectionBar.qml  Separator.qml  SettingTemplate.qml  SettingsDialog.qml  SettingsSection.qml  ShareDialog.qml  ShareDialogLinux.qml  SplitToolBar.qml  TabsBrowser.qml  ToolButtonAction.qml  WindowControls.qml  WindowControlsLinux.qml  WindowControlsMac.qml  WindowControlsWindows.qml  index.qdoc
src/controls/libs/: appview.h  imagepalette.cpp  imagepalette.h
src/controls/plugin/: AppViewsPlugin.qml  PagePlugin.qml  PluginManager.qml
src/controls/private/: AboutDialog.qml  AccountsHelper.qml  ActionGroup.qml  AudioPreview.qml  BasicToolButton.qml  BrowserHolder.qml  BrowserMenu.qml  BrowserSettings.qml  BrowserView.qml  CheckIndicator.qml  ColorScheme.qml  CompressedPreview.qml  DefaultPreview.qml  DocumentPreview.qml  EdgeShadow.qml  FileMenu.qml  ImagePreview.qml  PathBarDelegate.qml  PieButtonDelegate.qml  SideBarDelegate.qml  StoreDelegate.qml  SyncAndroid.qml  SyncLinux.qml  TagDelegate.qml  TagList.qml  TerminalInputArea.qml  TextPreview.qml  VideoPreview.qml
src/controls/private/shapes/: Arrow.qml  CheckMark.qml  PlusSign.qml  Rectangle.qml  Triangle.qml  X.qml
src/controls/private/src/: patharrowbackground.cpp  patharrowbackground.h
src/csd/Default/: config.conf
src/csd/Nitrux/: config.conf
src/csd/OSX/: config.conf
src/csd/libappletdecoration/: CMakeLists.txt  appletdecorationplugin.cpp  appletdecorationplugin.h  auroraetheme.cpp  auroraetheme.h  buttonsmodel.cpp  buttonsmodel.h  commontools.cpp  commontools.h  decorationpalette.cpp  decorationpalette.h  decorationsmodel.cpp  decorationsmodel.h  environment.cpp  environment.h  padding.cpp  padding.h  previewbridge.cpp  previewbridge.h  previewbutton.cpp  previewbutton.h  previewclient.cpp  previewclient.h  previewsettings.cpp  previewsettings.h  previewshareddecoration.cpp  previewshareddecoration.h  schemecolors.cpp  schemecolors.h  schemesmodel.cpp  schemesmodel.h  themeextended.cpp  themeextended.h  types.h  windowsystem.cpp  windowsystem.h
src/fm/: basemodel.cpp  basemodel.h  downloader.cpp  downloader.h  fm.cpp  fm.h  fm.qrc  fmdb.cpp  fmdb.h  fmh.h  fmlist.cpp  fmlist.h  fmmodel.cpp  fmmodel.h  modellist.cpp  modellist.h  pathlist.cpp  pathlist.h  placeslist.cpp  placeslist.h  placesmodel.cpp  placesmodel.h  script.sql
src/kde/: kde.pri  kdeconnect.cpp  kdeconnect.h  mauikde.cpp  mauikde.h  notify.cpp  notify.h
src/macos/: macos.pri  mauimacos.h  mauimacos.mm  share.h
src/maui-style/: .gitignore  BusyIndicator.qml  Button.qml  CheckBox.qml  CheckIndicator.qml  ComboBox.qml  Dialog.qml  DialogButtonBox.qml  Drawer.qml  Menu.qml  MenuItem.qml  MenuSeparator.qml  Page.qml  Popup.qml  ProgressBar.qml  README.md  RangeSlider.qml  ScrollBar.qml  ScrollView.qml  Slider.qml  SpinBox.qml  Switch.qml  SwitchDelegate.qml  SwitchIndicator.qml  TabBar.qml  TextArea.qml  TextField.qml  ToolBar.qml  ToolButton.qml  icons.qrc  icons_png.qrc  style.qrc
src/utils/: appsettings.cpp  appsettings.h  fmh.cpp  fmh.h  fmstatic.cpp  fmstatic.h  handy.cpp  handy.h  mauiaccounts.cpp  mauiaccounts.h  mauiapp.cpp  mauiapp.h  settings.cpp  settings.h  utils.h
src/utils/accounts/: accounts.qrc  accountsdb.cpp  accountsdb.h  mauiaccounts.cpp  mauiaccounts.h  script.sql
src/utils/editor/: documenthandler.cpp  documenthandler.h  syntaxhighlighter.pri  syntaxhighlighterutil.cpp  syntaxhighlighterutil.h
src/utils/fm/: downloader.cpp  downloader.h  fileloader.cpp  fileloader.h  fm.cpp  fm.h  fmlist.cpp  fmlist.h  placeslist.cpp  placeslist.h  thumbnailer.cpp  thumbnailer.h
src/utils/model_template/: mauilist.cpp  mauilist.h  mauimodel.cpp  mauimodel.h
src/utils/models/: pathlist.cpp  pathlist.h
src/utils/plugin/: CMakeLists.txt  pluginmanager.cpp  pluginmanager.h
src/utils/store/: attica.pri  providers.xml  store.cpp  store.h  storelist.cpp  storelist.h  storemodel.cpp  storemodel.h
src/utils/syncing/: syncing.cpp  syncing.h  syncinglist.cpp  syncinglist.h  syncingmodel.cpp  syncingmodel.h
src/utils/tagging/: script.sql  tag.h  tagdb.cpp  tagdb.h  tagging.cpp  tagging.h  tagging.pri  tagslist.cpp  tagslist.h  tagsmodel.cpp  tagsmodel.h
(+307 files in other folders)
